Name:                nix-path
Version:             0.0.1
Synopsis:            nix-path
License:             MIT
License-file:        LICENSE
Author:              Rickard Nilsson <rickynils@gmail.com>
Category:            Nix
Build-type:          Simple
Cabal-version:       >=1.10

Executable nix-path
  Default-language: Haskell2010
  Main-is: Main.hs
  Ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  Build-depends:
      base  >= 4.3 && < 5
    , async
    , attoparsec
    , bytestring
    , containers
    , data-fix >= 0.0.7
    , directory
    , dirstream
    , filepath
    , system-filepath
    , hnix >= 0.3.4
    , hweblib
    , process
    , pipes
    , pipes-concurrency >= 2.0.8
    , pipes-safe
    , random
    , split
    , temporary
    , text
    , unix
    , uuid
    , xdg-basedir
    , xxhash
