Name:                nix-path
Version:             0.0.1
Synopsis:            nix-path
License:             MIT
License-file:        LICENSE
Author:              Rickard Nilsson <rickynils@gmail.com>
Category:            Nix
Build-type:          Simple
Cabal-version:       >=1.10

Library
  hs-source-dirs: src
  exposed-modules:
    NixPath.PathFile
    NixPath.Parsers
    NixPath.Types
  Ghc-options: -Wall
  Build-depends:
      base  >= 4.3 && < 5
    , attoparsec
    , bytestring
    , containers
    , data-fix >= 0.0.7
    , hnix >= 0.4.0
    , hweblib
    , filepath
    , text
    , unix

Executable nix-path
  Default-language: Haskell2010
  Main-is: Main.hs
  Ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  Build-depends:
      base  >= 4.3 && < 5
    , nix-path
    , async
    , bytestring
    , containers
    , directory
    , dirstream
    , filepath
    , hweblib
    , system-filepath
    , process
    , pipes
    , pipes-concurrency >= 2.0.8
    , pipes-safe
    , random
    , split
    , temporary
    , text
    , unix
    , uuid
    , xdg-basedir
    , xxhash
